deployment-customer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  ports:
  - port: 8080
    name: http-customer
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer-service
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
       labels:
         app: customer-service
    spec:
      containers:
        - name: customer-app
          image: gcr.io/ultimate-hydra-288114/customer-app-gcloud:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
