gcloud-spring-boot-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gcloud-spring-boot-ingress
spec:
  backend:
    serviceName: customer-service
    servicePort: http-customer
